--- a/app/src/main/res/layout/activity_foerste_leder.xml
+++ b/app/src/main/res/layout/activity_foerste_leder.xml
@@ -7,7 +7,7 @@
     tools:context=".FoersteLederActivity">
 
     <Button
-        android:id="@+id/opretmødeBtn"
+        android:id="@+id/startMødeBtn"
         android:layout_width="270dp"
         android:layout_height="60dp"
         android:layout_marginBottom="8dp"
@@ -26,7 +26,7 @@
         app:layout_constraintVertical_bias="0.625" />
 
     <Button
-        android:id="@+id/startmødeBtn"
+        android:id="@+id/opretMødeBtn"
         android:layout_width="270dp"
         android:layout_height="60dp"
         android:layout_marginBottom="8dp"
