--- a/app/src/main/res/layout/activity_moede_deltag.xml
+++ b/app/src/main/res/layout/activity_moede_deltag.xml
@@ -49,14 +49,14 @@
             android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:text="Møde ID"
             android:textColor="@android:color/background_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.547"
-            tools:text="Møde ID" />
+            app:layout_constraintVertical_bias="0.547" />
 
         <ImageView
             android:id="@+id/imageView2"
