--- a/app/src/main/res/layout/activity_moede_deltag.xml
+++ b/app/src/main/res/layout/activity_moede_deltag.xml
@@ -48,8 +48,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:ems="10"
+            android:hint="Møde ID"
             android:inputType="textPersonName"
-            android:text="Møde ID"
             android:textColor="@android:color/background_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
