--- a/app/src/main/res/layout/activity_tab4.xml
+++ b/app/src/main/res/layout/activity_tab4.xml
@@ -71,15 +71,15 @@
         app:layout_constraintVertical_bias="0.498" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/spm4TextView"
         android:layout_width="417dp"
         android:layout_height="79dp"
         android:layout_marginBottom="8dp"
-        android:text="Indsæt spørgsmål"
+        android:background="#8BC53E"
+        android:text="Spørgsmål 4"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="30sp"
-        android:background="#8BC53E"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
