--- a/app/src/main/res/layout/activity_moede_deltag.xml
+++ b/app/src/main/res/layout/activity_moede_deltag.xml
@@ -42,7 +42,7 @@
     <EditText
         android:id="@+id/indtastMødeID"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="47dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -50,10 +50,11 @@
         android:ems="10"
         android:hint="Møde id"
         android:inputType="number"
-        android:maxLength="4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
 
