--- a/app/src/main/res/drawable/add_btn.xml
+++ b/app/src/main/res/drawable/add_btn.xml
@@ -1,6 +1,6 @@
 <vector
     android:height="24dp"
-    android:tint="#D6E2D5"
+    android:tint="#294239"
     android:viewportHeight="24.0"
     android:viewportWidth="24.0"
     android:width="24dp"
