--- a/app/src/main/res/layout/activity_deltager_dagsorden.xml
+++ b/app/src/main/res/layout/activity_deltager_dagsorden.xml
@@ -13,8 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="75dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="8dp"
-        android:background="#CCD6DD"
+        android:background="@color/colorPrimary"
         android:text="Velkommen til møde XX\nDagsorden "
         android:textAlignment="center"
         android:textColor="@android:color/black"
@@ -28,10 +27,11 @@
         android:id="@+id/tilbageLederBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="51dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/knap_baggrund"
         android:text="Tilbage"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/feedbackBtn"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +44,7 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/knap_baggrund"
         android:text="Start feedback"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="@+id/tilbageLederBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tilbageLederBtn"
