--- a/app/src/main/res/layout/activity_foerste_leder.xml
+++ b/app/src/main/res/layout/activity_foerste_leder.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".FoersteLederActivity">
 
     <Button
         android:id="@+id/startMødeBtn"
-        android:layout_width="270dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -17,7 +18,7 @@
         android:background="@drawable/knap_baggrund"
         android:fontFamily="sans-serif"
         android:text="Start møde"
-        android:textColor="#050505"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,8 +28,8 @@
 
     <Button
         android:id="@+id/opretMødeBtn"
-        android:layout_width="270dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -36,7 +37,7 @@
         android:background="@drawable/knap_baggrund"
         android:fontFamily="sans-serif"
         android:text="Opret møde"
-        android:textColor="#050505"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +57,7 @@
         android:fadingEdge="vertical"
         android:fontFamily="sans-serif"
         android:text="Tilbage"
-        android:textColor="#050505"
+        android:textColor="#FFFFFF"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
