--- a/app/src/main/res/layout/activity_leder_opret_moede.xml
+++ b/app/src/main/res/layout/activity_leder_opret_moede.xml
@@ -4,20 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DFE0E0"
     tools:context=".LederOpretMoedeActivity"
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="419dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="17dp"
-        android:background="#CCD6DD"
+        android:layout_height="71dp"
+        android:layout_marginBottom="45dp"
+        android:background="@color/colorPrimary"
         android:text="Information"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/mailEdit"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,20 +33,22 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="427dp"
-        android:layout_height="30dp"
+        android:layout_height="57dp"
         android:layout_marginBottom="11dp"
-        android:background="#CCD6DD"
+        android:background="@color/colorPrimary"
         android:text="Opret dagsorden"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mailEdit" />
 
@@ -65,11 +69,12 @@
         android:id="@+id/tilbageLederBtn"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="72dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/knap_baggrund"
         android:text="Tilbage"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/opretmødeBtn"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,6 +87,7 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/knap_baggrund"
         android:text="opret møde"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="@+id/tilbageLederBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tilbageLederBtn"
