--- a/app/src/main/res/layout/activity_deltager_dagsorden.xml
+++ b/app/src/main/res/layout/activity_deltager_dagsorden.xml
@@ -23,33 +23,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/tilbageLederBtn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="51dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/knap_baggrund"
-        android:text="Tilbage"
-        android:textColor="@android:color/background_light"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/feedbackBtn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
     <Button
         android:id="@+id/feedbackBtn"
-        android:layout_width="0dp"
+        android:layout_width="383dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/knap_baggrund"
         android:text="Start feedback"
         android:textColor="@android:color/background_light"
-        app:layout_constraintBottom_toBottomOf="@+id/tilbageLederBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tilbageLederBtn"
-        app:layout_constraintTop_toTopOf="@+id/tilbageLederBtn" />
-
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
     <ScrollView
         android:id="@+id/scrollView2"
