--- a/app/src/main/res/layout/activity_deltager_dagsorden.xml
+++ b/app/src/main/res/layout/activity_deltager_dagsorden.xml
@@ -10,12 +10,11 @@
 
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/overskriftTekst"
         android:layout_width="0dp"
         android:layout_height="75dp"
         android:layout_marginBottom="10dp"
         android:background="@color/colorPrimary"
-        android:text="Velkommen til møde XX\nDagsorden "
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="24sp"
@@ -27,16 +26,17 @@
 
     <Button
         android:id="@+id/feedbackBtn"
-        android:layout_width="363dp"
+        android:layout_width="200dp"
         android:layout_height="69dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/knap_baggrund"
         android:text="Start feedback"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.23"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2"
         app:layout_constraintVertical_bias="1.0" />
@@ -47,7 +47,7 @@
         android:layout_height="342dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9">
+        app:layout_constraintTop_toBottomOf="@+id/overskriftTekst">
 
 
         <LinearLayout
