--- a/app/src/main/res/layout/activity_highscore.xml
+++ b/app/src/main/res/layout/activity_highscore.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".Highscore"
+    tools:context=".Mødeleder.Highscore"
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
