--- a/app/src/main/res/layout/activity_deltager_dagsorden.xml
+++ b/app/src/main/res/layout/activity_deltager_dagsorden.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DFE0E0"
-    tools:context=".deltagerDagsordenActivity"
+    tools:context=".Mødedeltager.deltagerDagsordenActivity"
     tools:layout_editor_absoluteY="81dp">
 
 
