--- a/app/src/main/res/layout/activity_leder_opret_moede.xml
+++ b/app/src/main/res/layout/activity_leder_opret_moede.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DFE0E0"
-    tools:context=".LederOpretMoedeActivity"
+    tools:context=".Mødeleder.LederOpretMoedeActivity"
     tools:layout_editor_absoluteY="81dp">
 
     <EditText
