--- a/app/src/main/res/layout/activity_tab2.xml
+++ b/app/src/main/res/layout/activity_tab2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DFE0E0"
-    tools:context=".Tab2">
+    tools:context=".Fragment.Tab2">
 
     <Button
         android:id="@+id/surBtn"
